# projects

./: ormconfig.json  package.json
assembler/eratosthenesSieve/: eratosthenesSieve.s
cpp/agNav/: CMakeLists.txt  README.org  package.xml  plugin_description.xml
cpp/agNav/dev/: setup_hooks.sh
cpp/agNav/dev/hooks/: org_precommit.sh
cpp/agNav/docs/: README.org  index.html~  index.org
cpp/agNav/example/: octomap_pubsub.cpp  octomap_service.cpp  pillar_traversability_mapping.cpp  proof_of_concept.cpp  proof_of_concept2.cpp
cpp/agNav/include/: #TraverseOctomapServer.h#  OcTreeTrueLeafIterator.hxx  TraversabilityOcTree.h  TraversabilityOctomapServer.h  conversions.h
cpp/agNav/include/octomap_rviz_plugins/: occupancy_grid_display.h  point_cloud_transparency.h
cpp/agNav/launch/: bag_test.launch  benchmark.launch  kernel_test.launch  octomap_traversability.launch  planar_map_test.launch  sim_test.launch
cpp/agNav/launch/include/gazebo/: empty_world.launch  jackal_bringup.launch  jackal_world.launch
cpp/agNav/launch/include/move_base/: move_base.launch.xml
cpp/agNav/launch/include/path_planner/: move_base.launch.xml  pc_path.launch.xml  prm.launch.xml
cpp/agNav/launch/include/robot_stack/: robot_stack.launch.xml
cpp/agNav/launch/include/rosconsole/: rosconsole_warn.conf
cpp/agNav/launch/include/traversability/: tixiao_bgk.launch.xml
cpp/agNav/launch/include/validator/: config_world.launch.xml
cpp/agNav/launch/params/: gazebo_world.yaml  path_planner.yaml  traversability.yaml
cpp/agNav/launch/params/move_base/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
cpp/agNav/models/goal_position/: model.config  model.sdf
cpp/agNav/rviz/: benchmark.rviz  planar_map.rviz
cpp/agNav/src/benchmarking/: benchmark_manager.py  gazebo_world_validator.py  world_handler.py
cpp/agNav/src/octomap_rviz_plugins/: occupancy_grid_display.cpp  point_cloud_transparency.cpp
cpp/agNav/src/planar_map/: planar_map.cpp  traversability_height.cpp
cpp/agNav/src/test/: kernel_comparison_test.cpp
cpp/agNav/src/traversability_octomap/: #TraverseOctomapServer.cpp#  OctomapServer.cpp  TraversabilityOcTree.cpp  TraversabilityOctomapServer.cpp  TraverseOctomapServer.cpp  octomap_traversability_node.cpp  octomap_traversability_node_bis.cpp  octomap_traversability_visualizer.cpp
cpp/agNav/urdf/: jackal.gazebo  jackal_velodyne.urdf.xacro
cpp/agNav/urdf/config/: control.yaml
cpp/agNav/worlds/: boxes.world  cylinders.world  jackal_race.world  office.world  office_2.world  parking_lot.world  test.world  willow_garage.world
cpp/agNav/worlds/statenIsland/: statenIslandMap.world  statenIslandTerrainmap README.txt
java/Calculator/nbproject/private/: private.properties
java/Calculator/src/calculator/: Calculator.java  CalculatorBryk.java
java/celestialSim/: README.md  build.xml
java/celestialSim/data/: Gravity Simulator_ Euler (Simple) Approach.docx
java/celestialSim/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
java/celestialSim/nbproject/private/: private.properties  private.xml
java/celestialSim/src/celestialsim/: Body.java  CelestialSim.java  SolarSystemData.java  Vec3d.java
java/processing/animatedCircle/: Ball.pde  hw1a.pde
java/processing/drawGrid/: hw1c.pde
java/processing/functions/: hw2a.pde
java/processing/loops/: hw1b.pde
java/processing/sierpinskiTriangle/: hw2a_Sierpinski.pde
java/processing/sumReciprocals/: hw1e.pde
java/processing/vectors/: hw3a.pde
machine-learning/: ConcreteCompressiveStrength.html  ConcreteCompressiveStrength.py  CreditRisk.ipynb  EntropyTest.ipynb  HandwrittenDigits.ipynb  HousingPrices_OverfitExample.ipynb
machine-learning/.ipynb_checkpoints/: CreditRisk-checkpoint.ipynb  ServiceSubscriber-checkpoint.ipynb
